# systemc-tlm-performance-labs

./: .gitignore  INTERVIEW_NOTES.md  MODEL_ASSUMPTIONS.md  PORTFOLIO_CASE_STUDY.md  README.md  REGRESSION_TESTPLAN.md  VALIDATION_PLAN.md
assets/portfolio/: README.md
docs/: accuracy_validation_taxonomy.md  engineering_lessons.md  next_phase_roadmap.md  portfolio_architecture_story.md  portfolio_evidence_pack.md  project_at6_heterogeneous_soc_fabric.md  project_at7_gpu_like_throughput_saturation.md  project_b_gem5_trace_replay_bridge_design.md  project_c_gem5_se_trace_extraction_design.md  project_c_gem5_se_trace_extraction_mvp.md  project_d_cpp_trace_replay_engine_design.md  project_e_banked_memory_controller_report.md  project_f_gem5_stats_correlation_report.md  project_g_golden_reference_correlation_plan.md  project_h_verilator_rtl_golden_model_report.md  project_i_profiler_counter_correlation_interface_report.md  project_j_accuracy_validation_report.md  project_k_workload_aware_memory_bottleneck_report.md  project_r_headless_regression_harness_design.md  regression_harness.md  stage1_summary.md
examples/at/: CMakeLists.txt  README.md  project_at4_cache_mshr_pressure.cpp  project_at5_backpressure_qos_collapse.cpp  project_at6_heterogeneous_soc_fabric.cpp  project_at7_gpu_like_throughput_saturation.cpp
examples/at/four_phase_memory_timing/: CMakeLists.txt  main.cpp
examples/at/multi_initiator_arbitration/: CMakeLists.txt  main.cpp
examples/at/qos_sensitivity_sla/: CMakeLists.txt  main.cpp
examples/at/results/project_at6_heterogeneous_soc_fabric/: comparison.md  summary.csv
examples/at/results/project_at7_gpu_like_throughput_saturation/: comparison.md  summary.csv
examples/at/systemc/include/: at_lab.h
examples/at/systemc/src/: at_lab.cpp  main.cpp
examples/at/tools/: analyze_phase_trace.py  demo_at4_cache_mshr_pressure.py  demo_at5_backpressure_qos_collapse.py  demo_at_lab.py  demo_project_at1_four_phase_memory_timing.py  demo_project_at2_multi_initiator_arbitration.py  demo_project_at3_qos_sensitivity_sla.py  run_arbitration_sweep.py
examples/lt/: CMakeLists.txt  README_performance_lab.md
examples/lt/banked_memory_controller_cpp/: CMakeLists.txt
examples/lt/banked_memory_controller_cpp/include/project_e/: banked_memory_model.h  cli.h  csv.h
examples/lt/banked_memory_controller_cpp/src/: banked_memory_model.cpp  cli.cpp  csv.cpp  main.cpp
examples/lt/counter_samples/: sample_counter_samples.csv  sample_counter_source_metadata.csv
examples/lt/replay_cpp/: CMakeLists.txt
examples/lt/replay_cpp/include/replay_cpp/: cli.h  csv_reader.h  csv_writer.h  metrics.h  replay_model.h  trace_record.h  trace_validator.h
examples/lt/replay_cpp/src/: cli.cpp  csv_reader.cpp  csv_writer.cpp  main.cpp  metrics.cpp  replay_model.cpp  trace_validator.cpp
examples/lt/rtl_banked_memory_controller/: CMakeLists.txt
examples/lt/rtl_banked_memory_controller/rtl/: banked_memory_controller.sv
examples/lt/rtl_banked_memory_controller/sim/: csv_reader.cpp  csv_reader.h  main.cpp  metrics.cpp  metrics.h
examples/lt/systemc/src/: top.cpp
examples/lt/tools/: analyze_latency.py  build_accuracy_validation_packet.py  compare_python_cpp_replay_outputs.py  convert_gem5_se_trace.py  correlate_model_rtl_summaries.py  demo_accuracy_validation_packet.py  demo_banked_memory_controller_lab.py  demo_cpp_trace_replay_lab.py  demo_gem5_stats_correlation_lab.py  demo_memory_access_pattern_lab.py  demo_performance_lab.py  demo_profiler_counter_correlation_lab.py  demo_project_k_workload_bottleneck_lab.py  demo_rtl_golden_model_lab.py  demo_trace_replay_lab.py  gem5_stats_correlation.py  normalize_profiler_counters.py  run_gem5_se_trace_extraction.py  run_memory_access_pattern_sweep.py  run_trace_replay_lab.py  run_workload_sweep.py
examples/lt/traces/: gem5_sample_sequential_trace.csv  gem5_sample_stride_trace.csv  gem5_sequential_trace.csv  gem5_stride_trace.csv  sample_sequential_trace.csv  sample_stride_trace.csv
examples/lt/validation_packet/: project_j_claim_matrix.csv  project_j_evidence_table.csv  project_j_unsupported_claims.csv
examples/lt/workloads/gem5_se/: README.md  sequential_scan.c  stride_scan.c
scripts/: run_all_regressions.sh
tools/: generate_portfolio_evidence_summary.py  render_portfolio_cards.py  run_portfolio_validation.py
